# yuzu

./: Cargo.toml
data/: main.yuzu  module.yuzu  module2.yuzu
data/std/: fs.yuzu  std.yuzu
data2/: main.yuzu  mod1.yuzu  std.yuzu
example/mylib/: yuzuconf.json
example/mylib/src/: main.yuzu
example/mypackage/: yuzuconf.json
example/mypackage/src/: main.yuzu  mod1.yuzu
example/std/: yuzuconf.json
example/std/src/: main.yuzu
reference/: class.yz  files.yuzu  main.yz  simple.yuzu  simple.yz  std.yuzu  std.yz  test.yuzu  types.yuzu
src/: lexer.rs  location.rs  main.rs  package.rs  parser.rs  tree_interpreter.rs
src/bytecode/: instruction.rs  mod.rs
src/gc_interpreter/: exception.rs  mod.rs  resolver.rs  resource.rs  standard.rs  value.rs
src/gc_interpreter/standard/: array.rs  buffer.rs  fs.rs  future.rs  mod.rs  object.rs  rand.rs  resource.rs  string.rs  system.rs
src/gc_interpreter/value/: future.rs  mod.rs  number.rs
src/parser/: expression.rs  mod.rs  types.rs
src/tree_interpreter/: mod.rs  resource.rs  standard.rs  value.rs
src/type_checker/: mod.rs  value_type.rs
