[package]
name = "yuzu"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
chumsky = { version = "0.11.1", features = ["pratt"] }
clap = { version = "4.5.48", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
gc-arena = "0.5.3"
logos = "0.15.1"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.8.5"
