[package]
name = "yuzu"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
chumsky = { version = "0.11.1", features = ["pratt"] }
clap = { version = "4.5.48", features = ["derive"] }
gc-arena = "0.5.3"
logos = "0.15.1"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
